JumpScript/tests/baselines/reference/tooManyTypeParameters1.errors.txt
tests/cases/compiler/tooManyTypeParameters1.jump(2,1): error TS2558: Expected 1 type arguments, but got 2.
tests/cases/compiler/tooManyTypeParameters1.jump(5,1): error TS2558: Expected 1 type arguments, but got 2.
tests/cases/compiler/tooManyTypeParameters1.jump(8,9): error TS2558: Expected 1 type arguments, but got 2.
tests/cases/compiler/tooManyTypeParameters1.jump(11,8): error TS2314: Generic type 'I<T>' requires 1 type argument(s).


==== tests/cases/compiler/tooManyTypeParameters1.jump (4 errors) ====
    function f<T>() { }
    f<string, string>();
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 1 type arguments, but got 2.
    
    var x = <T>() => {};
    x<number,number>();
    ~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 1 type arguments, but got 2.
    
    class C<T> {}
    var c = new C<Date,Date>();
            ~~~~~~~~~~~~~~~~~~
!!! error TS2558: Expected 1 type arguments, but got 2.
    
    interface I<T> {}
    var i: I<number,number>;
           ~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).